Fri Nov 26 09:40:25 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/server/server.c src/tds/bulk.c src/tds/data.c:
	* src/tds/login.c src/tds/query.c src/tds/token.c:
	- add and use IS_TDS72_PLUS

Thu Nov 25 20:31:38 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c:
	- remove additional space from statistic procedure names

Sun Nov 21 22:24:02 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/iconv.c:
	- fix encoding problem with SQL_AltDiction2_CP1253_CS_AS

Fri Nov 19 18:30:55 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/fisql/fisql.c: spaces -> tabs

Thu Nov 18 22:19:03 EST 2010	JK Lowden <jklowden@freetds.org>
	* doc/fisql.txt src/apps/fisql/fisql.c
	- applied patch for -D database cf. ML Merle Reinhart 12 Nov 2010

Tue Nov 16 14:25:04 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/tds/challenge.c: fix NTLMv2 on 64-bit machine

Tue Nov 16 11:29:37 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/threadsafe.c:
	- fix possible core (patch from Peter C. Norton)

Tue Nov  9 16:46:15 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdsodbc.h src/odbc/connectparams.c:
	* src/tds/challenge.c src/tds/config.c:
	- add "use ntlmv2" option

Tue Nov  9 16:41:37 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/sspi.c: fix possible problem with sspi.h header

Tue Nov  9 13:48:22 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c:
	- send OSversion in NTLM type 1, fix flags using NTLMv2

Tue Nov  9 13:34:50 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: disable LANMAN authentication (too unsecure)

Thu Nov  4 20:38:16 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: allow to specify library options with --enable-krb5

Fri Oct 29 16:52:15 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>