@@ -1,3 +1,7 @@
+Fri Nov 26 20:05:17 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/error.c src/odbc/odbc.c src/odbc/sqlwparams.h:
+	- add PCHARIN/PCHAROUT macros to declare char parameters
+
 Fri Nov 26 09:40:25 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tds.h src/server/server.c src/tds/bulk.c src/tds/data.c:
 	* src/tds/login.c src/tds/query.c src/tds/token.c:
@@ -3023,4 +3027,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3161 2010/11/26 08:41:26 freddy77 Exp $
+$Id: ChangeLog,v 1.3162 2010/11/26 19:05:30 freddy77 Exp $
